# cgrad

./: CMakeLists.txt  Makefile  README.md  linear_example  mlp_example_output.txt  no_t_node.txt  out.txt  valgrind_out.txt  yes_t_node.txt
cgrad/: CMakeLists.txt
cgrad/include/cgrad/: cgrad_env.h  config.h  dtypes.h  error.h
cgrad/include/cgrad/autograd/backpropagation/: backpropagation.h  backpropagation_context.h  backpropagation_function.h  backpropagation_queue.h
cgrad/include/cgrad/autograd/computational_graph/: computational_graph.h  computational_graph_link.h
cgrad/include/cgrad/dataset/: csv_dataset.h  indexes_batch.h  indexes_permutation.h
cgrad/include/cgrad/datastructures/: tensor_list.h
cgrad/include/cgrad/layers/: conv2d.h  linear.h  relu.h
cgrad/include/cgrad/losses/: cross_entropy.h  mse.h
cgrad/include/cgrad/memory/: allocators.h
cgrad/include/cgrad/memory/computational_graph/: computational_graph_allocator.h  computational_graph_cpu_allocator.h  computational_graph_cpu_pool.h
cgrad/include/cgrad/memory/tensor/: tensor_allocator.h
cgrad/include/cgrad/memory/tensor/cpu/: tensor_cpu_allocator.h  tensor_cpu_pool.h
cgrad/include/cgrad/model/: model_params.h
cgrad/include/cgrad/optimizers/: sgd.h
cgrad/include/cgrad/tensor/: tensor.h  tensor2d_add_row_vector.h  tensor2d_mult.h  tensor2d_mult_lhs_trans.h  tensor2d_mult_rhs_trans.h  tensor2d_trans.h  tensor_add.h  tensor_add_inplace.h  tensor_alloc.h  tensor_axpy.h  tensor_copy.h  tensor_equality.h  tensor_get.h  tensor_helpers.h  tensor_im2row.h  tensor_norm.h  tensor_print_shape.h  tensor_reshape.h  tensor_scalar_mult_tensor_add.h  tensor_set.h  tensor_sum.h  tensor_trans.h
cgrad/include/cgrad/utils/: random.h
cgrad/src/: cgrad_env.c
cgrad/src/autograd/backpropagation/: backpropagation.c
cgrad/src/autograd/computational_graph/: computational_graph.c  computational_graph_link.c
cgrad/src/dataset/: csv_dataset.c  indexes_batch.c  indexes_permutation.c
cgrad/src/layers/: relu.c
cgrad/src/layers/conv2d/: conv2d.c
cgrad/src/layers/linear/: linear.c
cgrad/src/losses/: cross_entropy.c  mse.c
cgrad/src/memory/computational_graph/: computational_graph_cpu_allocator.c  computational_graph_cpu_pool.c
cgrad/src/memory/tensor/cpu/: tensor_cpu_allocator.c  tensor_cpu_pool.c
cgrad/src/model/: model_params.c
cgrad/src/optimizers/: sgd.c
cgrad/src/tensor/: tensor2d_add_row_vector.c  tensor2d_mult.c  tensor2d_mult_lhs_trans.c  tensor2d_mult_rhs_trans.c  tensor2d_trans.c  tensor_add.c  tensor_add_inplace.c  tensor_axpy.c  tensor_copy.c  tensor_equality.c  tensor_get.c  tensor_helpers.c  tensor_im2row.c  tensor_norm.c  tensor_reshape.c  tensor_scalar_mult_tensor_add.c  tensor_set.c  tensor_sum.c  tensor_trans.c
cgrad_test/: CMakeLists.txt
cgrad_test/include/cgrad_test/: assert.h  config.h  run_tests.h  test_case.h  test_result.h  test_result_error.h
cgrad_test/include/cgrad_test/datastructures/: test_list.h  test_list_callbacks.h
cgrad_test/include/cgrad_test/datastructures/test_list/: test_list.h  test_list_callbacks.h
cgrad_test/include/cgrad_test/tests/tensor/: tensor2d_mult_tests.h  tensor_tests.h
cgrad_test/src/: run_tests.c  tensor2d_mult_tests.c
cgrad_test/src/datastructures/: test_list.c  test_list_callbacks.c
examples/: CMakeLists.txt  conv_main.c  conv_mnist_classification.c  linear_example  linear_example.c  linear_example_old.c  linear_example_output.txt  linear_mnist_classification.c  linear_relu_example  linear_relu_example.c  linear_relu_example_output.txt  linear_transpose_example.c  linear_transpose_example_output.txt  mlp_classification_example.c  mlp_example.c  mlp_mnist_classification.c  mlp_mnist_classification_example.c  mlp_mnist_classification_example_f32.c  mlp_mnist_example.c  mlp_regression.c  mlp_regression_example.c  mlp_regression_example_f32.c
include/: backpropagation.h  backpropagation_function.h  computational_graph.h  config.h  error.h  grad_table.h  linear.h  model_params.h  mse.h  random.h  relu.h  sgd.h  tensor.h  tensor2d_add_row_vector.h  tensor2d_mult.h  tensor2d_trans.h  tensor_add.h
src/: backpropagation.c  computational_graph.c  grad_table.c  linear.c  model_params.c  mse.c  relu.c  sgd.c  tensor.c  tensor_add.c  (+3 more)
tests/: CMakeLists.txt  tensor_allocation.c  tensor_operations.c
(+125 files in other folders)
